sync code from internal (#402)